--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <img
@@ -15,7 +20,7 @@
       style="width: 40px"
     />
 
-    <nav>
+    <nav class="mobile-nav">
       <a href="#">ABOUT</a>
       <a href="#">PRICING</a>
       <a href="#">CONTACT US</a>
